<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="name_hint">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="one">1</string>
    <string name="order">Order</string>
    <string name="max_warning">You cannot have more than 100 coffees!</string>
    <string name="min_warning">You cannot have less than 1 coffee!</string>
    <string name="order_name">Name: <xliff:g id="name">%s</xliff:g></string>
    <string name="whipped_cream_check">" Add Whipped Cream? <xliff:g id="whipped_cream_status">%b</xliff:g>"</string>
    <string name="chocolate_check">" Add Chocolate? <xliff:g id="chocolate_status">%b</xliff:g>"</string>
    <string name="price">" Total: $"</string>
    <string name="thank_you">" Thank you!"</string>
</resources>
